[package]
name = "bitcoin-address-prefix-searcher"
version = "0.1.0"
authors = ["lispczz <mycinbrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.21.0"
secp256k1 = { version = "0.15.5", features = ["rand"] }
num_cpus = "1.11.1"

[profile.release]
opt-level = 3
