[package]
name = "bech32-vanity-address-generator"
version = "0.1.0"
authors = ["lispczz <mycinbrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.11.1"
rand = "0.7.2"
bitcoin_hashes = "0.7.3"
bech32 = "0.7.1"
bs58 = { version = "0.3.0", features = ["check"] }
secp256k1 = { version = "0.17.1", features = ["rand-std"] }

[profile.release]
opt-level = 3
